
We Aug  9 09:28:56 CEST 2006

	- Fixed error handling in numeric conversion (Joachim).
	- Fixed some memory bugs that somehow reappeared.
	- Also fixed a new Coverity report.

Su Aug 13 11:01:13 CEST 2006

	- Applied patch for VPATH builds by Alvaro Herrera
	  <alvherre@commandprompt.com>
	- Merged dyntest.pgc and dyntest2.pgc.

Mo Aug 14 10:39:59 CEST 2006

	- Added lots of SoC stuff made by Joachim.
	- Fixed broken newline on Windows.
	- Fixed a nasty buffer underrun that only occured when using Informix
	  no_indicator NULL setting on timestamps and intervals.

Fr 18. Aug 17:32:54 CEST 2006

	- Changed lexer to no longer use the default rule.
	- Synced parser and keyword list.
	- Fixed parsing of CONNECT statement so it accepts a C string again.
	- Fixed a buffer overrun that was masked on Linux systems.

Sa 19. Aug 14:11:32 CEST 2006

	- More SoC stuff.

Tu 22. Aug 13:54:08 CEST 2006

	- Descriptor values were quoted twice.

We 23. Aug 09:32:14 CEST 2006

	- Replaced double-quote-fix with a hopefully better version.
	- Use initializer string length as size for character strings.
	- Added ecpg_config.h file that is created via configure.

Th 24. Aug 11:53:29 CEST 2006

	- Fixed of by one variable size.
	- Synced parser.

Su 27. Aug 17:54:36 CEST 2006

	- Enabled single-quoted connection targets.
	- Fixed a memory leak/segfault in unsuccessful connection.

Tu 29. Aug 14:21:31 CEST 2006

	- Fixed parser and library to allow empty database names.
	- Streamlined connection name parsing.

Su 3. Sep 14:21:29 CEST 2006

	- Synced parser.
	- Added another regression test and fixed tcp test.

Tu 5. Sep 11:49:08 CEST 2006

	- Synced parser.
	- Fixed ecpglib trying to read one character after end-of-string.
	- Fixed port number setting in regression suite.
	- Added some interval checks to regression suite.
	- Started to cleanup complex tests.
	- Set ecpg library version to 5.2.
	- Set ecpg version to 4.2.1.