@@ -52,6 +52,7 @@ main(void)
 		timestamp ts1, ts2;
 		char *text;
 		interval *i1;
+		date *dc;
 	exec sql end declare section;
 
 	int i, j;
@@ -66,9 +67,12 @@ main(void)
 	free(text);
 
 	date1 = PGTYPESdate_from_timestamp(ts1);
-	text = PGTYPESdate_to_asc(date1);
+	dc = PGTYPESdate_new();
+	*dc = date1;
+	text = PGTYPESdate_to_asc(*dc);
 	printf("Date of timestamp: %s\n", text);
 	free(text);
+	PGTYPESdate_free(dc);
 
 	for (i = 0; dates[i]; i++)
 	{
@@ -107,6 +111,7 @@ main(void)
 
 	for (i = 0; intervals[i]; i++)
 	{
+		interval *ic;
 		i1 = PGTYPESinterval_from_asc(intervals[i], &endptr);
 		if (*endptr)
 			printf("endptr set to %s\n", endptr);
@@ -121,6 +126,13 @@ main(void)
 		text = PGTYPESinterval_to_asc(i1);
 		printf("interval[%d]: %s\n", i, text ? text : "-");
 		free(text);
+
+		ic = PGTYPESinterval_new();
+		PGTYPESinterval_copy(i1, ic);
+		text = PGTYPESinterval_to_asc(i1);
+		printf("interval_copy[%d]: %s\n", i, text ? text : "-");
+		free(text);
+		PGTYPESinterval_free(ic);
 	}
 
 	return (0);
