@@ -2144,5 +2144,10 @@ Tu 5. Sep 11:49:08 CEST 2006
 	- Fixed port number setting in regression suite.
 	- Added some interval checks to regression suite.
 	- Started to cleanup complex tests.
+
+Th 14. Sep 09:47:03 CEST 2006
+
+	- Completely removed complex tests.
+	- Added missing constuctor/destructor for interval and date.
 	- Set ecpg library version to 5.2.
 	- Set ecpg version to 4.2.1.
